first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    label-name: webapp
    release: "0"
spec:
  containers:
  - name: webapp
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0

---
apiVersion: v1
kind: Pod
metadata:
  name: webapp-release-0-5
  labels:
    label-name: webapp
    release: "0-5"
spec:
  containers:
  - name: webapp
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5

---
apiVersion: v1
kind: Pod
metadata:
  name: webapp-release-0-6
  labels:
    label-name: webapp
    release: "0-6"
spec:
  containers:
  - name: webapp
    image: nginxdemos/hello
