webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  # this defines which pods are going to be represented by the service.
  selector:
    label-name: webapp
    release: "0-5"
  ports:
  - name: http
    port: 80
    nodePort: 30082

  type: NodePort
