ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: london-man-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
    kubernetes.io/tls-acme: "true"

spec:
  tls:
    - hosts:
      - app.london-man.com
      secretName: london-man.tls
  rules:
  - host: app.london-man.com
    http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: london-man-frontend
            port:
              number: 3000

      - pathType: Prefix
        path: /api/v1/(.+)
        backend:
          service:
            name: london-man-webapp
            port:
              number: 80
